[gd_scene load_steps=15 format=2]

[ext_resource path="res://Deck.gd" type="Script" id=1]
[ext_resource path="res://Card.gd" type="Script" id=2]
[ext_resource path="res://MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://DeckSelect.gd" type="Script" id=5]

[sub_resource type="Animation" id=3]
resource_name = "CardDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "CardUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "CardDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "CardUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "CardDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "CardUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="DeckSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
custom_constants/separation = 100

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
margin_right = 1906.0
text = "Please select a total of 5 cards for your deck."

[node name="Deck" type="Control" parent="PanelContainer/VBoxContainer" groups=["playerselectiondeck"]]
margin_top = 100.0
margin_right = 1906.0
margin_bottom = 100.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Deck"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 100

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 1906.0
margin_bottom = 200.0
custom_constants/separation = 150
alignment = 1

[node name="Rock" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer" groups=["card"]]
margin_left = 803.0
margin_right = 803.0

[node name="Card" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Rock"]
margin_right = 80.0
margin_bottom = 96.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Rock/Card"]
margin_left = 7.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Rock/Card/VBoxContainer"]
margin_right = 66.0
margin_bottom = 14.0
text = "Rock"

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/Rock/Card/VBoxContainer"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 82.0
texture_normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/VBoxContainer/HBoxContainer/Rock/Card"]
anims/CardDown = SubResource( 3 )
anims/CardUp = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Paper" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer" groups=["card"]]
margin_left = 953.0
margin_right = 953.0

[node name="Card" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Paper"]
margin_right = 80.0
margin_bottom = 96.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
card = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Paper/Card"]
margin_left = 7.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Paper/Card/VBoxContainer"]
margin_right = 66.0
margin_bottom = 14.0
text = "Paper"

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/Paper/Card/VBoxContainer"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 82.0
texture_normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/VBoxContainer/HBoxContainer/Paper/Card"]
anims/CardDown = SubResource( 4 )
anims/CardUp = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Scissors" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer" groups=["card"]]
margin_left = 1103.0
margin_right = 1103.0

[node name="Card" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Scissors"]
margin_right = 80.0
margin_bottom = 96.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
card = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Scissors/Card"]
margin_left = 7.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Scissors/Card/VBoxContainer"]
margin_right = 66.0
margin_bottom = 14.0
text = "Scissors"

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/Scissors/Card/VBoxContainer"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 82.0
texture_normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/VBoxContainer/HBoxContainer/Scissors/Card"]
anims/CardDown = SubResource( 7 )
anims/CardUp = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 1906.0
margin_bottom = 314.0

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 1906.0
margin_bottom = 428.0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 1906.0
margin_bottom = 548.0
text = "Done"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Rock/Card/VBoxContainer/TextureButton" to="." method="_on_RockCard_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Paper/Card/VBoxContainer/TextureButton" to="." method="_on_PaperButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Scissors/Card/VBoxContainer/TextureButton" to="." method="_on_ScissorsButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
